Fix CORS y SecurityConfig